--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "swiper": "^9.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
