--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-awesome-reveal": "^4.2.3",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.10.0",
     "react-router-hash-link": "^2.4.3",
